--- a/views/complete.erb
+++ b/views/complete.erb
@@ -69,7 +69,7 @@
                 </tr>
                 <tr>
                     <td>内容</td>
-                    <td><%= content %></td>
+                    <td><%= content.gsub(/\r\n|\r|\n/, "<br>") %></td>
                 </tr>
             </tbody>
         </table>
